--- a/css/styles.css
+++ b/css/styles.css
@@ -97,10 +97,9 @@ body {
 }
 
 
-
 /* Responsive Breakpoints */
 
-/* Small Device (≤ 576px) */
+/* Responsive for Small Device (≤ 576px) */
 
 @media (max-width: 576px){
 
@@ -143,9 +142,37 @@ body {
 
 
 
-/* Medium Device Responsive (576px – 992px) */
+/* Responsive Medium Device (576px – 992px) */
 
-@media {
+@media (min-width: 576px) and (max-width: 992px) {
 
+    .navbar {
+        padding: 18px 24px;
+    }
 
+    .nav-menu{
+        gap: 20px;
+        font-size: 13px;
+    }
+    .nav-btn {
+        padding: 8px 14px;
+        font-size: 13px;
+    }
+}
+
+/* Large Device (≥ 992px) */
+@media (min-width: 992px) {
+
+    .navbar {
+        padding: 20px 80px;
+    }
+
+    .nav-menu{
+        gap: 32px;
+        
+    }
+    .nav-btn {
+        padding: 10px 18px;
+        font-size: 1rem;
+    }
 }
